Bug #9576
hid_attach is missing one mutex_exit in error path
Start date:
2018-06-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
In hid_attach()
there is one error path leaving the function without releasing a mutex.
Since I don't think it is possible to hit this error path with current code this is more of a cleanup than an actual problem anyone would encounter.
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 80 to 100
git commit db1c88f6dab43484b6c33636600ac4596ff4c354
commit db1c88f6dab43484b6c33636600ac4596ff4c354 Author: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Date: 2018-06-04T08:35:40.000Z 9576 hid_attach is missing one mutex_exit in error path Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>